modified Cycle.java to be class not record and main.java